--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
