--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -41,12 +44,16 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@jest/globals": "^30.2.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-table": "^8.21.3",
+    "babel-jest": "^30.2.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "jest": "^30.2.0",
     "jsx": "^0.9.89",
     "lucide-react": "^0.548.0",
     "prisma": "^6.18.0",
